# spacefm

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  BUILD.md  GTK4.md  README.md  clang-format.sh  clang-tidy.sh  conf.sh  configure-clang.sh  configure-gcc.sh  meson.build  meson_options.txt
dialog/: meson.build
dialog/about/: about.cxx  about.hxx  main.cxx
dialog/app-chooser/: app-chooser.cxx  app-chooser.hxx  logger.cxx  logger.hxx  main.cxx
dialog/app-chooser/utils/: misc.cxx
dialog/app-chooser/vfs/: vfs-mime-type.cxx
dialog/app-chooser/vfs/utils/: vfs-utils.cxx  vfs-utils.hxx
dialog/bookmarks/: bookmarks.cxx  bookmarks.hxx
dialog/error/: error.cxx  error.hxx  main.cxx
dialog/error/vfs/utils/: icon.cxx  icon.hxx
dialog/file-action/: action.cxx  action.hxx  main.cxx
dialog/file-chooser/: chooser.cxx  main.cxx
dialog/file-create/: create.cxx  create.hxx  main.cxx
dialog/file-rename/: main.cxx  rename.cxx  rename.hxx
dialog/keybinding/: keybinding.cxx  keybinding.hxx  main.cxx  utils.cxx  utils.hxx
dialog/keybinding_set_key/: keybinding.cxx  keybinding.hxx  main.cxx  utils.cxx  utils.hxx
dialog/lib/: logger.cxx  logger.hxx
dialog/lib/utils/: permissions.cxx  permissions.hxx
dialog/lib/vfs/: file.cxx  file.hxx  mime-type.cxx  user-dirs.cxx  vfs-file.cxx  vfs-file.hxx  vfs-mime-type.cxx  vfs-mime-type.hxx  vfs-user-dirs.cxx
dialog/lib/vfs/mime-type/: mime-type.cxx
dialog/lib/vfs/utils/: utils.cxx  utils.hxx  vfs-utils.cxx
dialog/message/: main.cxx  message.cxx  message.hxx
dialog/pattern/: main.cxx  pattern.cxx  pattern.hxx
dialog/preference/: main.cxx  preference.cxx  preference.hxx
dialog/properties/: concurrency.cxx  concurrency.hxx  logger.hxx  main.cxx  properties.cxx  properties.hxx
dialog/properties/media/: audio-video-metadata.cxx  image-metadata.cxx  metadata.hxx
dialog/properties/vfs/: vfs-file.cxx  vfs-file.hxx  vfs-mime-type.cxx  vfs-mime-type.hxx  vfs-user-dirs.cxx
dialog/properties/vfs/mime-type/: mime-type.hxx
dialog/properties/vfs/utils/: vfs-utils.hxx
src/common/: logger.cxx  meson.build
src/common/natsort/: strnatcmp.cxx
src/common/vfs/: app-desktop.cxx  app-desktop.hxx  bookmarks.cxx  bookmarks.hxx  clipboard.cxx  clipboard.hxx  device.cxx  dir.cxx  dir.hxx  execute.cxx  execute.hxx  file.cxx  file.hxx  mime-monitor.cxx  mime-monitor.hxx  mime-type.cxx  mime-type.hxx  settings.hxx  task-manager.cxx  task-manager.hxx  thumbnailer.cxx  thumbnailer.hxx  trash-can.cxx  trash-can.hxx  user-dirs.cxx  volume-manager.cxx  volume-manager.hxx  volume.cxx  volume.hxx
src/common/vfs/libudevpp/: udev.cxx  udev_device.cxx  udev_enumerate.cxx  udev_monitor.cxx
src/common/vfs/linux/: mountinfo.hxx  procfs.hxx  self.cxx  self.hxx  sysfs.hxx
src/common/vfs/mime-type/: mime-action.cxx  mime-type.cxx
src/common/vfs/notify-cpp/: controller.cxx  controller.hxx  notification.cxx  notification.hxx  notify.cxx  notify.hxx
src/common/vfs/task/: chmod.cxx  copy.cxx  create-hardlink.cxx  create-symlink.cxx  move.cxx  remove.cxx  task.cxx  task.hxx
src/common/vfs/thumbnails/: thumbnails-legacy.cxx  thumbnails.cxx  thumbnails.hxx
src/common/vfs/utils/: editor.cxx  editor.hxx  file-ops.hxx  icon.cxx  permissions.hxx
src/gtk3/: autosave.cxx  main.cxx  meson.build  package.hxx  settings.cxx  settings.hxx  types.cxx
src/gtk3/commandline/: commandline.cxx  commandline.hxx  socket.cxx  socket.hxx
src/gtk3/commandline/socket/: subcommands.hxx
src/gtk3/datatypes/: external-dialog.hxx
src/gtk3/gui/: archiver.hxx  clipboard.cxx  dir-tree.cxx  dir-tree.hxx  file-browser.cxx  file-browser.hxx  file-list.cxx  file-list.hxx  file-menu.cxx  file-task.cxx  main-window.hxx  path-bar.cxx  path-bar.hxx
src/gtk3/gui/action/: delete.hxx  open.cxx  open.hxx  paste.cxx
src/gtk3/gui/dialog/: about.cxx  action-list.hxx  bookmarks.cxx  create.cxx  create.hxx  file-search.cxx  file-search.hxx  keybindings.cxx  properties.cxx  properties.hxx  rename-batch.cxx  rename-batch.hxx  text.cxx  text.hxx
src/gtk3/gui/utils/: history.cxx  sorter.hxx
src/gtk3/gui/view/: bookmark.cxx  bookmark.hxx  dir-tree.hxx  file-task.cxx  location.cxx  location.hxx
src/gtk3/settings/: config-load.cxx  config-save.cxx  settings.hxx
src/gtk3/settings/upgrade/: config-upgrade.cxx  config-upgrade.hxx
src/gtk3/socket/: commands.cxx  commands.hxx  server.cxx  server.hxx
src/gtk3/utils/: strdup.cxx  strdup.hxx
src/gtk3/xset/: xset-context-menu.cxx  xset-context-menu.hxx  xset-defaults.hxx  xset-lookup.cxx  xset.hxx
src/gtk3/xset/utils/: xset-utils.cxx  xset-utils.hxx
src/gtk4/: main.cxx  meson.build
src/gtk4/commandline/: commandline.cxx  commandline.hxx
src/gtk4/gui/: archiver.cxx  archiver.hxx  browser.cxx  browser.hxx  layout.cxx  layout.hxx  main-window.cxx  main-window.hxx  menubar.cxx  task.cxx  task.hxx
src/gtk4/gui/action/: delete.cxx  delete.hxx  open.cxx  trash.cxx  trash.hxx
src/gtk4/gui/dialog/: about.cxx  action.cxx  action.hxx  app-chooser.cxx  app-chooser.hxx  bookmarks.cxx  bookmarks.hxx  create.cxx  create.hxx  donate.cxx  overwrite.cxx  overwrite.hxx  pattern.cxx  pattern.hxx  preferences.cxx  preferences.hxx  properties.cxx  properties.hxx  rename.cxx  rename.hxx  text.cxx  text.hxx
src/gtk4/gui/lib/: clipboard.cxx  clipboard.hxx  history.cxx  history.hxx
src/gtk4/gui/tab/: files.cxx  files.hxx  path.cxx  path.hxx  search.hxx  side.cxx  side.hxx  side_default.cxx  side_default.hxx  side_device.cxx  side_device.hxx  side_tree.cxx  side_tree.hxx  statusbar.cxx  tab.cxx  tab.hxx  toolbar.cxx  toolbar.hxx
src/gtk4/settings/: config.cxx  config.hxx  settings.hxx
tests/: README.md  meson.build
tests/src/: main.cxx
tests/src/base/: test-types.cxx
tests/src/utils/: test-permissions.cxx
tests/src/vfs/: execute.cxx  task-manager.cxx  test-clipboard.cxx  test-error.cxx  test-execute.cxx  test-vfs-error.cxx
tools/: meson.build
tools/stress/: fs-events.cxx
tools/template/: main.cxx  window.cxx  window.hxx
tools/thumbnails/: thumbnails-create.cxx  thumbnails-validate.cxx  thumbnails.cxx
(+688 files in other folders)
