option(
    'tests',
    type : 'boolean',
    value : false,
    description : 'Build the test suite'
)

option(
    'dev',
    type : 'boolean',
    value: false,
    description : 'enable development features'
)

option(
    'tools',
    type : 'boolean',
    value: false,
    description : 'Build additional tools'
)

option(
    'gtk3',
    type : 'boolean',
    value: true,
    description : 'Build the Gtk3 version'
)

option(
    'gtk4',
    type : 'boolean',
    value: false,
    description : 'Build the experimental Gtk4 version'
)

option(
    'socket',
    type : 'boolean',
    value: true,
    description : 'Enable socket commands'
)

option(
    'media',
    type : 'boolean',
    value: true,
    description : 'Enable extra Audio, Video, and Image support'
)

option(
    'with-system-glaze',
    type : 'boolean',
    value: false,
    description : 'Use system glaze instead of bundled version'
)

option(
    'with-system-ztd',
    type : 'boolean',
    value: false,
    description : 'Use system ztd instead of bundled version'
)

option(
    'zmp_port',
    type : 'integer',
    value: 59172,
    description : 'Port number to use for socket commands'
)
